--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "npm install --legacy-peer-deps && prisma generate && next build",
+  "buildCommand": "npm install --legacy-peer-deps && npx prisma generate && next build",
   "installCommand": "npm install --legacy-peer-deps",
   "framework": "nextjs"
 }
