--- a/package.json
+++ b/package.json
@@ -10,23 +10,30 @@
     "postinstall": "npx prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^5.10.2",
+    "@prisma/client": "^6.4.1",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@vercel/blob": "^0.22.1",
+    "class-variance-authority": "^0.7.1",
     "date-fns": "^3.3.1",
+    "lucide-react": "^0.479.0",
     "next": "^14.2.24",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^9.22.0",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "prisma": "^5.22.0",
-    "tailwindcss": "^3.3.0",
+    "postcss": "^8.5.3",
+    "prisma": "^6.4.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
