--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.4.1",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
     "@vercel/blob": "^0.22.1",
     "class-variance-authority": "^0.7.1",
     "date-fns": "^3.3.1",
