--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@types/node": "^22.13.10",
+    "@types/react": "^19.0.10",
     "@vercel/blob": "^0.22.1",
     "class-variance-authority": "^0.7.1",
     "date-fns": "^3.3.1",
@@ -23,17 +25,15 @@
     "react-dom": "^18.3.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^3.4.17",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.8.2"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.5.3",
-    "prisma": "^6.4.1",
-    "typescript": "^5"
+    "prisma": "^6.4.1"
   }
 }
