--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@vercel/blob": "^0.22.1",
+    "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.479.0",
